Fixing the tagline hovering on title Flashback in Header.css and introduced whitespace, to prevent text wrapping

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -36,11 +36,12 @@ header h2 {
 header h2::after {
   content: "Auto Curate & Instant Share Memories";
   position: absolute;
-  bottom: -1em;
+  bottom: -1.2em;
   display: block;
   text-align: center;
   font-size: 30%;
   letter-spacing: 0.1em;
+  white-space: nowrap;
 }
 
 header img {
